--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dayjs": "^1.10.6",
     "express": "^4.17.3",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
