--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "dayjs": "^1.10.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.3",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
